# mcp_agent

./: .gitignore  Dockerfile  Dockerfile.alpine  Makefile  README.md  config.yaml  docker_deply.sh  gen_requirements_in.py  main.py  pyproject.toml  requirement.in  requirements.txt  test.py  workflow.yaml
app/: __init__.py  config.yaml  dependencies.py
app/routers/: __init__.py  workflow.py  workflow.yaml
app/utils/: __init__.py  common.py  db_client.py  db_pool.py  logger.py  mcp_utils.py
mcp/: __init__.py  excel_mcp.py  mysql_mcp.py  shell_mcp.py
